kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-na-nuvem-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: devops-na-nuvem-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-0f82fc87e3a2d6a0b,subnet-0e228a4a6ddd4f45f
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
